--- a/style.css
+++ b/style.css
@@ -202,7 +202,9 @@ body {
     color: #fff;
     border-radius: 5px;
     font-weight: 600;
-    font-size: 1rem;
+    font-size: larger;
+    text-decoration: none;
+    text-align: center;
     cursor: pointer;
     transition: background 0.2s;
 }
